--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,11 @@ indicatif = "0.17"
 
 # Build/codegen
 serde = { version = "1", features = ["derive"] }
-serde_yaml = "0.9"
+ron = "0.8"
+quote = "1"
+proc-macro2 = "1"
+syn = "2"
+prettyplease = "0.2"
 
 [package]
 name = "rflasher"
