--- a/crates/rflasher-chips-codegen/Cargo.toml
+++ b/crates/rflasher-chips-codegen/Cargo.toml
@@ -7,4 +7,8 @@ description = "Build-time code generator for flash chip database"
 
 [dependencies]
 serde.workspace = true
-serde_yaml.workspace = true
+ron.workspace = true
+quote.workspace = true
+proc-macro2.workspace = true
+syn.workspace = true
+prettyplease.workspace = true
