--- a/crates/rflasher-core/Cargo.toml
+++ b/crates/rflasher-core/Cargo.toml
@@ -15,3 +15,6 @@ bitflags.workspace = true
 embedded-io.workspace = true
 embedded-io-async.workspace = true
 thiserror = { workspace = true, optional = true }
+
+[build-dependencies]
+rflasher-chips-codegen = { path = "../rflasher-chips-codegen" }
