Add runtime RON chip database loading as default mode
- Refactor FlashChip to use owned types (String, Vec) for runtime flexibility
- Add ChipDatabase type for loading chip definitions from RON files at runtime
- Support loading from single file, RON string, or directory of files
- Add --chip-db CLI option to specify custom chip database path
- Make static-chips feature optional for buildtime code generation
- Update flash operations to work with owned chip types
- Keep no_std version with static references for embedded use

--- a/crates/rflasher-core/Cargo.toml
+++ b/crates/rflasher-core/Cargo.toml
@@ -7,14 +7,18 @@ description = "Core library for flash chip programming (no_std compatible)"
 
 [features]
 default = []
-std = ["alloc", "thiserror"]
+std = ["alloc", "thiserror", "serde", "ron"]
 alloc = []
+# Static chip database compiled at build time (optional, for no_std or embedded)
+static-chips = ["dep:rflasher-chips-codegen"]
 
 [dependencies]
 bitflags.workspace = true
 embedded-io.workspace = true
 embedded-io-async.workspace = true
 thiserror = { workspace = true, optional = true }
+serde = { workspace = true, optional = true, features = ["derive"] }
+ron = { workspace = true, optional = true }
 
 [build-dependencies]
-rflasher-chips-codegen = { path = "../rflasher-chips-codegen" }
+rflasher-chips-codegen = { path = "../rflasher-chips-codegen", optional = true }
