Implement CLI commands and layout system
- Add read/write/erase/verify commands with progress bars (indicatif)
- Add layout module with TOML, IFD, and FMAP parsing support
- Add layout CLI subcommands (show, extract, ifd, fmap, create)
- Add layout options (--layout, --include, --exclude, --region) to commands
- Update ARCHITECTURE.md to document Phase 3 and Phase 9 completion

--- a/crates/rflasher-core/Cargo.toml
+++ b/crates/rflasher-core/Cargo.toml
@@ -7,7 +7,7 @@ description = "Core library for flash chip programming (no_std compatible)"
 
 [features]
 default = []
-std = ["alloc", "thiserror", "serde", "ron"]
+std = ["alloc", "thiserror", "serde", "ron", "toml"]
 alloc = []
 # Static chip database compiled at build time (optional, for no_std or embedded)
 static-chips = ["dep:rflasher-chips-codegen"]
@@ -19,6 +19,7 @@ embedded-io-async.workspace = true
 thiserror = { workspace = true, optional = true }
 serde = { workspace = true, optional = true, features = ["derive"] }
 ron = { workspace = true, optional = true }
+toml = { version = "0.8", optional = true }
 
 [build-dependencies]
 rflasher-chips-codegen = { path = "../rflasher-chips-codegen", optional = true }
