Implement CH341A USB programmer support (Phase 4)
Add full CH341A USB-to-SPI programmer support using the nusb crate:

- Implement USB protocol from flashprog/ch341a_spi.c reference
- Add SPI streaming with bit reversal (lookup table)
- Handle CS control via UIO stream commands
- Support device detection, initialization, and enumeration
- Integrate into CLI with 'ch341a' programmer option
- Add ?Sized bounds to SpiMaster trait functions for dyn dispatch

The CH341A is now usable for all flash operations:
  rflasher probe -p ch341a
  rflasher read -p ch341a -o flash.bin
  rflasher write -p ch341a -i flash.bin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ license.workspace = true
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
 rflasher-dummy = { path = "crates/rflasher-dummy" }
+rflasher-ch341a = { path = "crates/rflasher-ch341a" }
 clap.workspace = true
 env_logger.workspace = true
 log.workspace = true
