--- a/crates/rflasher-ch341a/Cargo.toml
+++ b/crates/rflasher-ch341a/Cargo.toml
@@ -7,9 +7,10 @@ description = "CH341A USB programmer support for rflasher"
 
 [features]
 default = ["std"]
-std = ["rflasher-core/std", "nusb"]
+std = ["rflasher-core/std", "nusb", "futures-lite"]
 
 [dependencies]
 rflasher-core.workspace = true
 nusb = { workspace = true, optional = true }
+futures-lite = { version = "2", optional = true }
 log.workspace = true
