Implement serprog programmer and fix clippy warnings
- Add complete serprog implementation with serial and TCP transport
- Add protocol module with command definitions and command map
- Add device module implementing SpiMaster trait
- Add transport abstraction for serial/TCP communication
- Integrate serprog into CLI with dev= and ip= connection options
- Add nix flake for development environment
- Update ARCHITECTURE.md with serprog documentation
- Fix clippy warnings: use is_multiple_of() and idiomatic iterator

--- a/crates/rflasher-serprog/Cargo.toml
+++ b/crates/rflasher-serprog/Cargo.toml
@@ -7,10 +7,14 @@ description = "Serial Flasher Protocol (serprog) support for rflasher"
 
 [features]
 default = ["std"]
-std = ["rflasher-core/std"]
+std = ["rflasher-core/std", "serialport", "thiserror"]
 
 [dependencies]
 rflasher-core.workspace = true
 embedded-io.workspace = true
 embedded-io-async.workspace = true
 log.workspace = true
+
+# std-only dependencies
+serialport = { version = "4.5", optional = true }
+thiserror = { workspace = true, optional = true }
