Implement FTDI MPSSE programmer support (Phase 6)
Add full FTDI MPSSE programmer implementation using libftdi1 bindings:

- Support for 19 device types: FT2232H, FT4232H, FT232H, FT4233H,
  TUMPA, JTAGkey, PicoTAP, Google Servo, Olimex ARM-USB-*, and more
- MPSSE protocol implementation with configurable clock divisor
- GPIO control for CS and auxiliary pins (GPIOL0-3)
- Multi-channel support (A/B/C/D depending on device)
- Device-specific pin configurations automatically applied
- SpiMaster trait implementation with 64KB read/256B write support

CLI usage:
  rflasher probe -p ftdi
  rflasher probe -p ftdi:type=2232h,port=B,divisor=10
  rflasher read -p ftdi:type=jtagkey -o flash.bin

--- a/crates/rflasher-ftdi/Cargo.toml
+++ b/crates/rflasher-ftdi/Cargo.toml
@@ -7,8 +7,15 @@ description = "FTDI MPSSE programmer support for rflasher"
 
 [features]
 default = ["std"]
-std = ["rflasher-core/std"]
+std = ["rflasher-core/std", "ftdi", "nusb", "futures-lite"]
 
 [dependencies]
 rflasher-core.workspace = true
 log.workspace = true
+
+# FTDI support - using ftdi crate (libftdi1 bindings)
+ftdi = { version = "0.1", optional = true }
+
+# USB device enumeration (for listing devices)
+nusb = { workspace = true, optional = true }
+futures-lite = { version = "2", optional = true }
