Implement Linux spidev programmer support (Phase 7)
Add rflasher-linux-spi crate with full spidev implementation:
- Raw ioctl interface via nix crate for SPI_IOC_MESSAGE
- Two-transfer SPI operations (write then read)
- Automatic kernel buffer size detection from sysfs
- Configurable device path, SPI speed (kHz), and mode (0-3)
- SpiMaster trait implementation with 4-byte address support

Usage: rflasher probe -p linux_spi:dev=/dev/spidev0.0,spispeed=4000,mode=0

--- a/crates/rflasher-linux-spi/Cargo.toml
+++ b/crates/rflasher-linux-spi/Cargo.toml
@@ -12,3 +12,6 @@ std = ["rflasher-core/std"]
 [dependencies]
 rflasher-core.workspace = true
 log.workspace = true
+thiserror.workspace = true
+libc = "0.2"
+nix = { version = "0.29", features = ["ioctl"] }
