Implement Intel internal programmer with unified CLI interface
Add Intel ICH/PCH internal SPI controller support for accessing system
flash via the chipset's built-in SPI controller. The internal programmer
now works with standard read/write/erase/probe commands via -p internal.

Key components:
- chipset.rs: IchChipset enum with ICH7, ICH9, PCH100+ generations
- intel_pci.rs: ~150 PCI IDs for Intel chipsets (ICH7 through Arrow Lake)
- pci.rs: PCI bus scanning and config space access via sysfs
- physmap.rs: Physical memory mapping via /dev/mem for MMIO
- ich_regs.rs: SPI controller register definitions (HSFS, HSFC, FADDR, etc.)
- ichspi.rs: SPI controller driver with hardware sequencing support
- programmer.rs: InternalProgrammer implementing OpaqueMaster trait

CLI integration:
- Create Programmer enum to wrap SpiMaster and OpaqueMaster types
- Add opaque command implementations for internal programmer
- Remove separate internal-probe/internal-read commands
- Internal programmer uses IFD to determine flash size and regions

Usage: rflasher probe/read/write/erase -p internal [--ifd --region bios]

--- a/crates/rflasher-internal/Cargo.toml
+++ b/crates/rflasher-internal/Cargo.toml
@@ -7,8 +7,12 @@ description = "Intel chipset internal flash programmer support for rflasher"
 
 [features]
 default = ["std"]
-std = ["rflasher-core/std"]
+std = ["rflasher-core/std", "dep:thiserror"]
 
 [dependencies]
 rflasher-core.workspace = true
 log.workspace = true
+thiserror = { workspace = true, optional = true }
+
+[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
+libc = "0.2"
