Optimize ichspi hardware sequencing for performance parity with flashprog
Key optimizations:
- Replace std::thread::sleep with clock_gettime busy-loop in hwseq_wait_for_cycle
  The sleep syscall has ~50-100us minimum granularity on Linux, causing 4x slowdown
  when we need 8us precision. Busy-loop matches flashprog's udelay.c approach.

- Use #[inline(always)] on hot-path functions (physmap read/write, hwseq helpers)

- Optimize read_data/fill_data to process full 32-bit words instead of byte-by-byte

- Clear HSFS status once at start of read/write/erase loops instead of each iteration

- Add LTO and single codegen-unit to release profile for better optimization

- Use read-modify-write for HSFC register to preserve reserved bits (matches C code)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,3 +78,8 @@ rflasher-serprog = { path = "crates/rflasher-serprog", optional = true }
 rflasher-ftdi = { path = "crates/rflasher-ftdi", optional = true }
 rflasher-linux-spi = { path = "crates/rflasher-linux-spi", optional = true }
 rflasher-internal = { path = "crates/rflasher-internal", optional = true }
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
