Abstract SPI/Opaque programmers behind rflasher-flash crate
Create new rflasher-flash crate that provides a unified FlashHandle
abstraction, hiding SpiMaster and OpaqueMaster from the CLI completely.

Changes:
- Add rflasher-flash crate with FlashHandle, ChipInfo, and open_flash()
- Extend SpiFlashDevice/OpaqueFlashDevice with Owned/Borrowed enum variants
  to support both borrowing (backwards compatible) and ownership (new code)
- Update CLI to use open_flash() directly instead of closure-based with_flash()
- Move programmer registry from src/programmers.rs to rflasher-flash crate
- CLI now only imports rflasher-flash, never sees programmer traits

The CLI is now cleanly separated from programmer implementation details,
achieving the same abstraction level as flashprog's struct flashctx.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "crates/rflasher-core",
+    "crates/rflasher-flash",
     "crates/rflasher-chips-codegen",
     "crates/rflasher-ch341a",
     "crates/rflasher-serprog",
@@ -52,32 +53,25 @@ license.workspace = true
 [features]
 default = ["dummy", "ch341a", "serprog", "linux-spi", "internal"]
 
-# Programmer features
-dummy = ["dep:rflasher-dummy"]
-ch341a = ["dep:rflasher-ch341a"]
-serprog = ["dep:rflasher-serprog"]
-ftdi = ["dep:rflasher-ftdi"]
-linux-spi = ["dep:rflasher-linux-spi"]
-internal = ["dep:rflasher-internal"]
+# Programmer features (passed through to rflasher-flash)
+dummy = ["rflasher-flash/dummy"]
+ch341a = ["rflasher-flash/ch341a"]
+serprog = ["rflasher-flash/serprog"]
+ftdi = ["rflasher-flash/ftdi"]
+linux-spi = ["rflasher-flash/linux-spi"]
+internal = ["rflasher-flash/internal"]
 
 # Enable all programmers
 all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "internal"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
+rflasher-flash = { path = "crates/rflasher-flash", features = ["std"] }
 clap.workspace = true
 env_logger.workspace = true
 log.workspace = true
 indicatif.workspace = true
 thiserror.workspace = true
-
-# Optional programmer dependencies
-rflasher-dummy = { path = "crates/rflasher-dummy", optional = true }
-rflasher-ch341a = { path = "crates/rflasher-ch341a", optional = true }
-rflasher-serprog = { path = "crates/rflasher-serprog", optional = true }
-rflasher-ftdi = { path = "crates/rflasher-ftdi", optional = true }
-rflasher-linux-spi = { path = "crates/rflasher-linux-spi", optional = true }
-rflasher-internal = { path = "crates/rflasher-internal", optional = true }
 
 [profile.release]
 lto = true
