Add comprehensive README and man page generation
- Add detailed README.md with installation, usage examples, and contributing guide
- Mention rflasher as a loose port of flashprog with SPI-only scope
- Document RON chip database and installation paths
- Include TODO section for porting more chips and programmers
- Set up clap_mangen for automated man page generation
- Add gen-manpage binary to regenerate man pages from CLI definitions
- Add /man to .gitignore (generated files)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "internal"
 rflasher-core = { workspace = true, features = ["std"] }
 rflasher-flash = { path = "crates/rflasher-flash", features = ["std"] }
 clap.workspace = true
+clap_mangen = "0.2"
 env_logger.workspace = true
 log.workspace = true
 indicatif.workspace = true
