Refactor FMAP area parsing to use iterators and fold
Replace imperative for loop with functional iterator chain using filter
and fold. Construct Region structs directly without mutation for
cleaner, more functional code.

--- a/crates/rflasher-core/Cargo.toml
+++ b/crates/rflasher-core/Cargo.toml
@@ -20,6 +20,7 @@ thiserror = { workspace = true, optional = true }
 serde = { workspace = true, optional = true, features = ["derive"] }
 ron = { workspace = true, optional = true }
 toml = { version = "0.8", optional = true }
+zerocopy = { version = "0.8", features = ["derive"] }
 
 [build-dependencies]
 rflasher-chips-codegen = { path = "../rflasher-chips-codegen", optional = true }
