Add SFDP mismatch logging and improve probe diagnostics
- Update ChipInfo to include SFDP info, from_database flag, and mismatches
- Add probe_and_create_handle helper to centralize SPI programmer probing
- Add log_sfdp_mismatches and log_probe_result for detailed probe logging
- Add debug logging in probe_detailed for JEDEC ID and SFDP probe results
- Update all programmer open functions to use probe_detailed
- Show SFDP status and mismatches in 'info' command output
- Add optional log dependency to rflasher-core (enabled with std feature)

--- a/crates/rflasher-core/Cargo.toml
+++ b/crates/rflasher-core/Cargo.toml
@@ -7,7 +7,7 @@ description = "Core library for flash chip programming (no_std compatible)"
 
 [features]
 default = []
-std = ["alloc", "thiserror", "serde", "ron", "toml"]
+std = ["alloc", "thiserror", "serde", "ron", "toml", "log"]
 alloc = []
 # Static chip database compiled at build time (optional, for no_std or embedded)
 static-chips = ["dep:rflasher-chips-codegen"]
@@ -21,6 +21,7 @@ serde = { workspace = true, optional = true, features = ["derive"] }
 ron = { workspace = true, optional = true }
 toml = { version = "0.8", optional = true }
 zerocopy = { version = "0.8", features = ["derive"] }
+log = { workspace = true, optional = true }
 
 [build-dependencies]
 rflasher-chips-codegen = { path = "../rflasher-chips-codegen", optional = true }
