Add Linux MTD programmer support
Port linux_mtd from flashprog to support reading/writing flash via the
Linux Memory Technology Device (MTD) subsystem. This provides an opaque
interface for NOR flash devices at /dev/mtdN.

Key features:
- Sysfs-based device discovery and info parsing
- MEMERASE ioctl for block erase operations
- NOR flash validation (rejects non-NOR MTD devices)
- Uniform erase region support only
- Block-aligned I/O for optimal performance

Added linux_mtd to default features and included documentation in README.

--- a/crates/rflasher-flash/Cargo.toml
+++ b/crates/rflasher-flash/Cargo.toml
@@ -13,6 +13,7 @@ rflasher-ch341a = { path = "../rflasher-ch341a", optional = true }
 rflasher-serprog = { path = "../rflasher-serprog", optional = true }
 rflasher-ftdi = { path = "../rflasher-ftdi", optional = true }
 rflasher-linux-spi = { path = "../rflasher-linux-spi", optional = true }
+rflasher-linux-mtd = { path = "../rflasher-linux-mtd", optional = true }
 rflasher-internal = { path = "../rflasher-internal", optional = true }
 
 [features]
@@ -26,4 +27,5 @@ ch341a = ["dep:rflasher-ch341a"]
 serprog = ["dep:rflasher-serprog"]
 ftdi = ["dep:rflasher-ftdi"]
 linux-spi = ["dep:rflasher-linux-spi"]
+linux-mtd = ["dep:rflasher-linux-mtd"]
 internal = ["dep:rflasher-internal"]
