--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "crates/rflasher-ftdi",
     "crates/rflasher-internal",
     "crates/rflasher-linux-spi",
+    "crates/rflasher-linux-mtd",
     "crates/rflasher-dummy",
 ]
 
@@ -51,7 +52,7 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default = ["dummy", "ch341a", "serprog", "linux-spi", "internal"]
+default = ["dummy", "ch341a", "serprog", "linux-spi", "linux-mtd", "internal"]
 
 # Programmer features (passed through to rflasher-flash)
 dummy = ["rflasher-flash/dummy"]
@@ -59,10 +60,11 @@ ch341a = ["rflasher-flash/ch341a"]
 serprog = ["rflasher-flash/serprog"]
 ftdi = ["rflasher-flash/ftdi"]
 linux-spi = ["rflasher-flash/linux-spi"]
+linux-mtd = ["rflasher-flash/linux-mtd"]
 internal = ["rflasher-flash/internal"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "internal"]
+all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "internal"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
