Add Linux GPIO bitbang SPI programmer
Implements SPI flash access via GPIO bitbanging using the Linux GPIO
character device interface (/dev/gpiochipN). This enables SPI flash
programming on platforms like Raspberry Pi using regular GPIO pins.

Features:
- Pure Rust implementation using gpiocdev crate (no C dependencies)
- Configurable GPIO pin mapping (CS, SCK, MOSI, MISO)
- Adjustable SPI clock speed via half-period delay
- Support for quad I/O pins (IO2, IO3) for future expansion
- Compatible with Linux kernel 4.8+ GPIO character device API

The implementation is inspired by flashprog's linux_gpio2_spi but uses
a pure Rust GPIO library instead of libgpiod C bindings.

Usage:
  rflasher probe -p linux_gpio_spi:gpiochip=0,cs=25,sck=11,mosi=10,miso=9

New crate: rflasher-linux-gpio
Programmer aliases: linux_gpio_spi, linux-gpio-spi, linux_gpio, linux-gpio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "crates/rflasher-internal",
     "crates/rflasher-linux-spi",
     "crates/rflasher-linux-mtd",
+    "crates/rflasher-linux-gpio",
     "crates/rflasher-dummy",
 ]
 
@@ -61,10 +62,11 @@ serprog = ["rflasher-flash/serprog"]
 ftdi = ["rflasher-flash/ftdi"]
 linux-spi = ["rflasher-flash/linux-spi"]
 linux-mtd = ["rflasher-flash/linux-mtd"]
+linux-gpio = ["rflasher-flash/linux-gpio"]
 internal = ["rflasher-flash/internal"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "internal"]
+all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "linux-gpio", "internal"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
