Enable both uAPI v1 and v2 for Linux GPIO programmer
Support both versions of the Linux GPIO character device API for
maximum compatibility across kernel versions. The gpiocdev crate
automatically detects and uses the appropriate version at runtime,
preferring v2 when available and falling back to v1 on older kernels.

This matches flashprog's dual implementation approach (linux_gpio_spi.c
and linux_gpio2_spi.c) while leveraging Rust's unified abstraction.

--- a/crates/rflasher-linux-gpio/Cargo.toml
+++ b/crates/rflasher-linux-gpio/Cargo.toml
@@ -13,4 +13,4 @@ std = ["rflasher-core/std"]
 rflasher-core.workspace = true
 log.workspace = true
 thiserror.workspace = true
-gpiocdev = "0.8"
+gpiocdev = { version = "0.8", features = ["uapi_v1", "uapi_v2"] }
