Add Raiden Debug SPI programmer support
Implement support for Chrome OS EC USB SPI bridges (Raiden Debug SPI).
This enables programming SPI flash chips on Chromebooks and similar devices
through debug hardware like SuzyQable, Servo V4, C2D2, etc.

New crate: rflasher-raiden
- Implements USB protocol V1 and V2 for Raiden Debug SPI
- Supports multiple targets (AP, EC, H1, AP custom)
- Device discovery via USB VID/subclass/protocol matching
- Proper USB control transfers with interface number
- Variable-length USB packet support (not always 64 bytes)
- Retry logic for busy/transient errors

Key fixes:
- Use interface number in USB control transfers (wIndex parameter)
- Send only required bytes in USB packets, not always 64 bytes
- Chunk SFDP reads to respect max_read_len() for V1 protocol (62 bytes max)
- Add raiden feature to workspace and flash registry

Tested with real hardware (Chromebook via SuzyQable).

Usage:
  rflasher -p raiden read firmware.bin
  rflasher -p raiden_debug_spi:target=ec read ec.bin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
     "crates/rflasher-linux-mtd",
     "crates/rflasher-linux-gpio",
     "crates/rflasher-dummy",
+    "crates/rflasher-raiden",
 ]
 
 [workspace.package]
@@ -53,7 +54,7 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default = ["dummy", "ch341a", "serprog", "linux-spi", "linux-mtd", "internal"]
+default = ["dummy", "ch341a", "serprog", "linux-spi", "linux-mtd", "internal", "raiden"]
 
 # Programmer features (passed through to rflasher-flash)
 dummy = ["rflasher-flash/dummy"]
@@ -64,9 +65,10 @@ linux-spi = ["rflasher-flash/linux-spi"]
 linux-mtd = ["rflasher-flash/linux-mtd"]
 linux-gpio = ["rflasher-flash/linux-gpio"]
 internal = ["rflasher-flash/internal"]
+raiden = ["rflasher-flash/raiden"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "linux-gpio", "internal"]
+all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
@@ -77,6 +79,9 @@ env_logger.workspace = true
 log.workspace = true
 indicatif.workspace = true
 thiserror.workspace = true
+
+[dev-dependencies]
+nusb = { workspace = true }
 
 [profile.release]
 lto = true
