Add CH347 USB programmer support
Implements support for the CH347T/F high-speed USB to SPI programmer.
The CH347 is a newer device from WCH that offers significant improvements
over the CH341A including USB 2.0 high-speed (480 Mbps), configurable SPI
speeds up to 60 MHz, and dual chip select lines.

Features implemented:
- Device detection for both CH347T (0x55DB) and CH347F (0x55DE) variants
- Configurable SPI speeds from 468.75 kHz to 60 MHz (8 presets)
- SPI modes 0-3 support (CPOL/CPHA configuration)
- Dual chip select lines (CS0/CS1) with cs=<0|1> parameter
- MSB/LSB bit order configuration
- USB high-speed transfers (no bit reversal needed unlike CH341A)
- 4-byte address support (software handled)

Usage:
  rflasher probe -p ch347
  rflasher read -p ch347:spispeed=30000 -o flash.bin
  rflasher write -p ch347:cs=1,spimode=0 -i flash.bin

Future enhancements documented:
- Dual I/O mode (2-bit bidirectional data)
- Quad I/O mode (4-bit data lines)

The implementation was inspired by flashprog's ch347_spi driver and
follows the same code structure as the existing CH341A driver.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/rflasher-flash",
     "crates/rflasher-chips-codegen",
     "crates/rflasher-ch341a",
+    "crates/rflasher-ch347",
     "crates/rflasher-serprog",
     "crates/rflasher-ftdi",
     "crates/rflasher-internal",
@@ -54,11 +55,12 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default = ["dummy", "ch341a", "serprog", "linux-spi", "linux-mtd", "internal", "raiden"]
+default = ["dummy", "ch341a", "ch347", "serprog", "linux-spi", "linux-mtd", "internal", "raiden"]
 
 # Programmer features (passed through to rflasher-flash)
 dummy = ["rflasher-flash/dummy"]
 ch341a = ["rflasher-flash/ch341a"]
+ch347 = ["rflasher-flash/ch347"]
 serprog = ["rflasher-flash/serprog"]
 ftdi = ["rflasher-flash/ftdi"]
 linux-spi = ["rflasher-flash/linux-spi"]
@@ -68,7 +70,7 @@ internal = ["rflasher-flash/internal"]
 raiden = ["rflasher-flash/raiden"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "serprog", "ftdi", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
+all-programmers = ["dummy", "ch341a", "ch347", "serprog", "ftdi", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
