Add Dediprog SF100/SF200/SF600/SF700 USB programmer support
Port the Dediprog programmer from flashprog to rflasher. Supports:
- SF100, SF200, SF600, SF600PG2, and SF700 devices
- Protocol versions V1, V2, and V3 with auto-detection
- Configurable SPI speed (24MHz to 375kHz)
- Voltage selection (1.8V, 2.5V, 3.5V)
- Multi-I/O modes (dual/quad) for SF600+ with protocol V2+
- Device selection by index or serial number
- Dual flash target selection

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "crates/rflasher-chips-codegen",
     "crates/rflasher-ch341a",
     "crates/rflasher-ch347",
+    "crates/rflasher-dediprog",
     "crates/rflasher-serprog",
     "crates/rflasher-ftdi",
     "crates/rflasher-ft4222",
@@ -56,12 +57,13 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default = ["dummy", "ch341a", "ch347", "serprog", "ft4222", "linux-spi", "linux-mtd", "internal", "raiden"]
+default = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ft4222", "linux-spi", "linux-mtd", "internal", "raiden"]
 
 # Programmer features (passed through to rflasher-flash)
 dummy = ["rflasher-flash/dummy"]
 ch341a = ["rflasher-flash/ch341a"]
 ch347 = ["rflasher-flash/ch347"]
+dediprog = ["rflasher-flash/dediprog"]
 serprog = ["rflasher-flash/serprog"]
 ftdi = ["rflasher-flash/ftdi"]
 ft4222 = ["rflasher-flash/ft4222"]
@@ -72,7 +74,7 @@ internal = ["rflasher-flash/internal"]
 raiden = ["rflasher-flash/raiden"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "ch347", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
+all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
