--- a/crates/rflasher-flash/Cargo.toml
+++ b/crates/rflasher-flash/Cargo.toml
@@ -11,6 +11,7 @@ log = "0.4"
 rflasher-dummy = { path = "../rflasher-dummy", optional = true }
 rflasher-ch341a = { path = "../rflasher-ch341a", optional = true }
 rflasher-ch347 = { path = "../rflasher-ch347", optional = true }
+rflasher-dediprog = { path = "../rflasher-dediprog", optional = true }
 rflasher-serprog = { path = "../rflasher-serprog", optional = true }
 rflasher-ftdi = { path = "../rflasher-ftdi", optional = true }
 rflasher-ft4222 = { path = "../rflasher-ft4222", optional = true }
@@ -29,6 +30,7 @@ alloc = ["rflasher-core/alloc"]
 dummy = ["dep:rflasher-dummy"]
 ch341a = ["dep:rflasher-ch341a"]
 ch347 = ["dep:rflasher-ch347"]
+dediprog = ["dep:rflasher-dediprog"]
 serprog = ["dep:rflasher-serprog"]
 ftdi = ["dep:rflasher-ftdi"]
 ft4222 = ["dep:rflasher-ft4222"]
