Add rflasher-postcard crate and integrate with CLI
Add a new postcard-RPC based flash programmer that communicates with
microcontroller-based programmers over USB. The protocol is designed
to be no_std compatible for embedded firmware.

Key components:
- Protocol definitions with support for multi-I/O modes (Dual/Quad SPI)
- Host-side PostcardProgrammer implementing SpiMaster trait
- Example RP2040 firmware using Embassy async runtime

CLI integration:
- Enable by default in build
- Support vid/pid/serial/spispeed/cs parameters
- Available as 'postcard' or 'postcard_rpc' programmer name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "crates/rflasher-ch347",
     "crates/rflasher-dediprog",
     "crates/rflasher-serprog",
+    "crates/rflasher-postcard",
     "crates/rflasher-ftdi",
     "crates/rflasher-ft4222",
     "crates/rflasher-internal",
@@ -57,7 +58,7 @@ edition.workspace = true
 license.workspace = true
 
 [features]
-default = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ft4222", "linux-spi", "linux-mtd", "internal", "raiden"]
+default = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ft4222", "linux-spi", "linux-mtd", "internal", "raiden", "postcard"]
 
 # Programmer features (passed through to rflasher-flash)
 dummy = ["rflasher-flash/dummy"]
@@ -72,9 +73,10 @@ linux-mtd = ["rflasher-flash/linux-mtd"]
 linux-gpio = ["rflasher-flash/linux-gpio"]
 internal = ["rflasher-flash/internal"]
 raiden = ["rflasher-flash/raiden"]
+postcard = ["rflasher-flash/postcard"]
 
 # Enable all programmers
-all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
+all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden", "postcard"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
