feat(repl): add Steel Scheme REPL for scripting raw SPI commands
Implement an experimental REPL using Steel Scheme that allows users to
interactively execute SPI commands for flash chip programming. This is
useful for advanced users who need to script custom SPI sequences,
experiment with flash commands, or automate testing.

Features:
- Raw SPI command execution (single, dual, quad I/O modes)
- All standard SPI25 opcodes as constants (WREN, RDSR, PP, SE, etc.)
- Helper functions for common operations (read-jedec-id, read-status, etc.)
- Byte vector operations for data manipulation
- Rustyline-based readline with syntax highlighting and bracket matching
- Command history with arrow key navigation stored in ~/.local/share/rflasher/
- Tab completion for known rflasher functions

The REPL is an optional feature requiring '--features repl' to build.

Example session:
  λ > (read-jedec-id)
  => (239 16389)
  λ > (spi-read READ 0 16)
  => (255 255 255 255 ...)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "crates/rflasher-linux-gpio",
     "crates/rflasher-dummy",
     "crates/rflasher-raiden",
+    "crates/rflasher-repl",
 ]
 
 [workspace.package]
@@ -73,12 +74,16 @@ linux-gpio = ["rflasher-flash/linux-gpio"]
 internal = ["rflasher-flash/internal"]
 raiden = ["rflasher-flash/raiden"]
 
+# REPL feature for scripting with Steel Scheme
+repl = ["dep:rflasher-repl"]
+
 # Enable all programmers
 all-programmers = ["dummy", "ch341a", "ch347", "dediprog", "serprog", "ftdi", "ft4222", "linux-spi", "linux-mtd", "linux-gpio", "internal", "raiden"]
 
 [dependencies]
 rflasher-core = { workspace = true, features = ["std"] }
 rflasher-flash = { path = "crates/rflasher-flash", features = ["std"] }
+rflasher-repl = { path = "crates/rflasher-repl", optional = true }
 clap.workspace = true
 clap_mangen = "0.2"
 env_logger.workspace = true
