refactor(core): replace fixed-size EraseBlock regions with conditional Vec
Use RegionVec type alias that switches between heapless::Vec (no_std)
and alloc::Vec (std) based on the alloc feature. This eliminates the
awkward fixed-size array with region_count pattern.

Changes:
- Add RegionVec type alias in chip/types.rs
- Remove region_count field, use Vec length instead
- Add constructors: new(), with_count(), with_regions()
- EraseBlock is now Clone-only (not Copy) since Vec isn't Copy
- Update codegen to use constructors instead of struct literals
- Use Lazy<Vec<FlashChip>> for runtime-initialized chip database
- Add heapless and once_cell dependencies
- Fix unused imports in chips-codegen (clippy)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,10 @@ proc-macro2 = "1"
 syn = "2"
 prettyplease = "0.2"
 
+# no_std compatible
+heapless = { version = "0.8", features = ["serde"] }
+once_cell = { version = "1.21", default-features = false }
+
 [package]
 name = "rflasher"
 version.workspace = true
