--- a/crates/rflasher-core/Cargo.toml
+++ b/crates/rflasher-core/Cargo.toml
@@ -7,7 +7,7 @@ description = "Core library for flash chip programming (no_std compatible)"
 
 [features]
 default = []
-std = ["alloc", "thiserror", "serde", "ron", "toml"]
+std = ["alloc", "thiserror", "serde", "ron", "toml", "once_cell/std"]
 alloc = []
 # Static chip database compiled at build time (optional, for no_std or embedded)
 static-chips = ["dep:rflasher-chips-codegen"]
@@ -22,6 +22,8 @@ ron = { workspace = true, optional = true }
 toml = { version = "0.8", optional = true }
 zerocopy = { version = "0.8", features = ["derive"] }
 log.workspace = true
+heapless.workspace = true
+once_cell.workspace = true
 
 [build-dependencies]
 rflasher-chips-codegen = { path = "../rflasher-chips-codegen", optional = true }
